[gd_scene load_steps=4 format=3 uid="uid://bk62efbmdma8m"]

[ext_resource type="Texture2D" uid="uid://f1mqdpkhfyt0" path="res://Assets/Art/cannon.png" id="1_mh8s8"]
[ext_resource type="Script" path="res://Objects/cannon.gd" id="1_p5juw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7b60q"]
size = Vector2(31, 30)

[node name="Cannon" type="StaticBody2D"]
collision_mask = 0
script = ExtResource("1_p5juw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_7b60q")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_mh8s8")

[node name="Timer" type="Timer" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
